# selteqtask

./: .env.local  .gitignore  README.md  docker-compose.local.yml  local.yml  manage.py  production.yml  pyproject.toml  requirements.txt
compose/local/django/: Dockerfile  Dockerfile_django  entrypoint
compose/local/django/celery/beat/: start
compose/local/django/celery/worker/: start
config/: api_router.py  celery_app.py  pagination.py  renderers.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
postgres/: Dockerfile
selteq_task/: conftest.py
selteq_task/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
selteq_task/templates/: base.html
selteq_task/users/: adapters.py  admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
selteq_task/users/api/: serializers.py
selteq_task/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_name_user_first_name_and_more.py  0003_task.py
selteq_task/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
